--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend cohort",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.2.3",
+    "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.15"
   }
 }
